[gd_scene load_steps=2 format=3 uid="uid://ua7flckhaeyj"]

[ext_resource type="Script" path="res://EndScene.gd" id="1_p2p16"]

[node name="EndScene" type="Node2D"]
script = ExtResource("1_p2p16")

[node name="CorrectScoreLabel" type="Label" parent="."]
offset_left = 917.0
offset_top = 381.0
offset_right = 992.0
offset_bottom = 404.0
text = "Correct: 0"

[node name="IncorrectScoreLabel" type="Label" parent="."]
offset_left = 913.0
offset_top = 416.0
offset_right = 1001.0
offset_bottom = 439.0
text = "Incorrect: 0"

[node name="RestartButton" type="Button" parent="."]
offset_left = 838.0
offset_top = 485.0
offset_right = 933.0
offset_bottom = 516.0
text = "Play Again"

[node name="QuitButton" type="Button" parent="."]
offset_left = 977.0
offset_top = 484.0
offset_right = 1073.0
offset_bottom = 515.0
text = "Exit"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
